--- a/shares-portal/src/main/resources/application.properties
+++ b/shares-portal/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/shares?characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=yangfan0921
 
+# 设置Spring框架的日志输出门槛
+logging.level.com.review.shares.portal=debug
