--- a/shares-portal/src/main/resources/application.properties
+++ b/shares-portal/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=yangfan0921
 
 # 设置Spring框架的日志输出门槛
 logging.level.com.review.shares.portal=debug
+
+# 定义Spring-Security登录信息(定义用户名密码登录)
+spring.security.user.name=tom
+spring.security.user.password={bcrypt}$2a$10$T72MJiqf/oASuwzXpYIhf.tXS5oJELkrnhNw/YZbIpByMTVAMbns.
