--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>1.8</java.version>
         <mybatis.plus.version>3.3.1</mybatis.plus.version>
+        <pagehelper.starter.version>1.3.0</pagehelper.starter.version>
     </properties>
 
     <modules>
@@ -40,6 +41,12 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-generator</artifactId>
                 <version>${mybatis.plus.version}</version>
+            </dependency>
+            <!-- MyBatis 翻页查询工具 -->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.starter.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
