--- a/shares-portal/src/main/resources/application.properties
+++ b/shares-portal/src/main/resources/application.properties
@@ -8,3 +8,6 @@ logging.level.com.review.shares.portal=debug
 # 定义Spring-Security登录信息(定义用户名密码登录)
 spring.security.user.name=tom
 spring.security.user.password={bcrypt}$2a$10$T72MJiqf/oASuwzXpYIhf.tXS5oJELkrnhNw/YZbIpByMTVAMbns.
+
+#Spring Boot2.7因循环引用导致启动报错
+spring.main.allow-circular-references=true
