--- a/shares-portal/src/main/resources/application.properties
+++ b/shares-portal/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.security.user.password={bcrypt}$2a$10$T72MJiqf/oASuwzXpYIhf.tXS5oJELkrnhN
 
 #Spring Boot2.7因循环引用导致启动报错
 spring.main.allow-circular-references=true
+
+#自定义配置文件的路径和静态资源服务器的url
+shares.resource.path=file:D:/upload
+shares.resource.host=http://localhost:8899
