--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <module>gateway</module>
         <module>shares-client</module>
         <module>shares-sys</module>
+        <module>shares-commons</module>
+        <module>shares-faq</module>
     </modules>
 
     <dependencies>
@@ -37,6 +39,18 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
