--- a/shares-resource/src/main/resources/application.properties
+++ b/shares-resource/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8899
 
 
 # \u5B9A\u4E49\u5F53\u524DSpring\u5FAE\u670D\u52A1\u9879\u76EE\u7684\u540D\u79F0
-# \u6B64\u540D\u79F0\u4F1A\u6CE8\u518C\u5230nacos
+# \u6CE8\u518C\u5230nacos\u7684\u540D\u79F0
 spring.application.name=resource-server
 # \u6CE8\u518C\u5230nacos\u5FC5\u987B\u6307\u5B9Anacos\u6240\u5728\u7684\u8DEF\u5F84
 spring.cloud.nacos.discovery.server-addr=localhost:8848
