--- a/shares-faq/src/main/resources/application.properties
+++ b/shares-faq/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=yangfan0921
 # \u8BBE\u7F6ESpring\u6846\u67B6\u7684\u65E5\u5FD7\u8F93\u51FA\u95E8\u69DB
 logging.level.com.review.shares.portal=debug
 
+# Spring Data Redis\u7684\u4F4D\u7F6E
+spring.redis.host=localhost
+spring.redis.port=6379
