--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>shares-sys</module>
         <module>shares-commons</module>
         <module>shares-faq</module>
+        <module>shares-auth</module>
     </modules>
 
     <dependencies>
